--- a/projets/generateur-citations/index.html
+++ b/projets/generateur-citations/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Citations | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="buttons">
                     <button class="twitter-button" id="twitter">
-                        <i class="fab fa-twitter"></i> Partager
+                        <i class="fab fa-x-twitter"></i> Partager
                     </button>                    
                     <button class="twitter-button" id="facebook">
                         <i class="fab fa-facebook"></i> Partager
