modifications du css et de certaines fonctionnalités

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                         <h3>CHI .... FU ... MI</h3>
                         <p>Pierre Papier Ciseaux : un jeu intemporel, revisité par mes soins ! Clique, joue et
                             amuse-toi. Et si tu gagnes, tu pourras te vanter d'avoir battu mon code !</p>
-                        <a href="projets/jeu-javascript/index.html" class="btn-project">Voir le projet</a>
+                        <a href="projets/chi-fu-mi/index.html" class="btn-project">Voir le projet</a>
                     </div>
                 </div>
 
                 <div class="project-card" data-aos="fade-up">
                     <div class="project-image">
-                        <img src="images/tableau.png" alt="Tableau de bord">
+                        <img src="images/particules.jpg" alt="Tableau de bord">
                     </div>
                     <div class="project-content">
-                        <h3>Tableau de bord </h3>
-                        <p>Une interface raphique de representation du tableau de bord statistiques d'un administrateur
+                        <h3>Particules connectées </h3>
+                        <p>Une interface de representation du deplacement de particules connectées: juste du fun
                         </p>
-                        <a href="projets/tableau-bord/index.html" class="btn-project">Voir le projet</a>
+                        <a href="projets/particles/index.html" class="btn-project">Voir le projet</a>
                     </div>
                 </div>
 
