--- a/projets/generateur-degrades/index.html
+++ b/projets/generateur-degrades/index.html
@@ -154,7 +154,7 @@
             <div class="saved-gradients">
                 <h3>Dégradés sauvegardés</h3>
                 <div class="gradients-grid" id="saved-gradients-grid">
-                    &lt;!-- Saved gradients will be added here -->
+                   <!-- Saved gradients will be added here -->
                 </div>
             </div>
             
